fixed the nav bar

--- a/new master piece/User Cycle/courses.html
+++ b/new master piece/User Cycle/courses.html
@@ -59,14 +59,14 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="tg-header__top-info list-wrap">
-                            <li><img src="assets/img/icons/map_marker.svg" alt="Icon"> <span>589 5th Ave, NY 10024, USA</span></li>
-                            <li><img src="assets/img/icons/envelope.svg" alt="Icon"> <a href="mailto:info@skillgrodemo.com">info@skillgrodemo.com</a></li>
+                            <li><img src="assets/img/icons/map_marker.svg" alt="Icon"> <span>Jordan - Irbid </span></li>
+                            <li><img src="assets/img/icons/envelope.svg" alt="Icon"> <a href="mailto:info@qusayomar20@gmail.com">qusayomar20@gmail.com</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
                         <div class="tg-header__top-right">
                             <div class="tg-header__phone">
-                                <img src="assets/img/icons/phone.svg" alt="Icon">Call us: <a href="tel:0123456789">+123 599 8989</a>
+                                <img src="assets/img/icons/phone.svg" alt="Icon">Call us: <a href="tel:0123456789">+962 786 322 152</a>
                             </div>
                             <ul class="tg-header__top-social list-wrap">
                                 <li>Follow Us On :</li>
