--- a/new master piece/User Cycle/student-dashboard.html
+++ b/new master piece/User Cycle/student-dashboard.html
@@ -355,33 +355,17 @@
                                         <li>
                                             <a href="student-enrolled-courses.html">
                                                 <i class="skillgro-book"></i>
-                                                Enrolled Courses
+                                                My Events
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-wishlist.html">
-                                                <i class="skillgro-label"></i>
-                                                Wishlist
-                                            </a>
-                                        </li>
+                                        
                                         <li>
                                             <a href="student-review.html">
                                                 <i class="skillgro-book-2"></i>
-                                                Reviews
+                                                My tickets
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-attempts.html">
-                                                <i class="skillgro-question"></i>
-                                                My Quiz Attempts
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="student-history.html">
-                                                <i class="skillgro-satchel"></i>
-                                                Order History
-                                            </a>
-                                        </li>
+                                        
                                     </ul>
                                 </nav>
                                 <div class="dashboard__sidebar-title mt-30 mb-20">
@@ -414,11 +398,11 @@
                                     <div class="col-lg-4 col-sm-6">
                                         <div class="dashboard__counter-item">
                                             <div class="icon">
-                                                <i class="skillgro-book"></i>
+                                                <i class="skillgro-tutorial"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="count odometer" data-count="15"></span>
-                                                <p>Enrolled Courses</p>
+                                                <span class="count odometer" data-count="4"></span>
+                                                <p>Events in Waiting</p>
                                             </div>
                                         </div>
                                     </div>
@@ -436,11 +420,11 @@
                                     <div class="col-lg-4 col-sm-6">
                                         <div class="dashboard__counter-item">
                                             <div class="icon">
-                                                <i class="skillgro-diploma-1"></i>
+                                                <i class="skillgro-tutorial"></i>
                                             </div>
                                             <div class="content">
                                                 <span class="count odometer" data-count="10"></span>
-                                                <p>Completed Courses</p>
+                                                <p>Attended Events</p>
                                             </div>
                                         </div>
                                     </div>
@@ -448,7 +432,7 @@
                             </div>
                             <div class="progress__courses-wrap">
                                 <div class="dashboard__content-title">
-                                    <h4 class="title">In progress Courses</h4>
+                                    <h4 class="title">My Latest Events </h4>
                                 </div>
                                 <div class="row">
                                     <div class="col-xl-4 col-md-6">
