--- a/new master piece/User Cycle/student-enrolled-courses.html
+++ b/new master piece/User Cycle/student-enrolled-courses.html
@@ -340,7 +340,7 @@
                                 </div>
                                 <nav class="dashboard__sidebar-menu">
                                     <ul class="list-wrap">
-                                        <li>
+                                        <li >
                                             <a href="student-dashboard.html">
                                                 <i class="fas fa-home"></i>
                                                 Dashboard
@@ -352,36 +352,20 @@
                                                 My Profile
                                             </a>
                                         </li>
-                                        <li class="active">
+                                        <li  class="active">
                                             <a href="student-enrolled-courses.html">
                                                 <i class="skillgro-book"></i>
-                                                Enrolled Courses
+                                                My Events
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-wishlist.html">
-                                                <i class="skillgro-label"></i>
-                                                Wishlist
-                                            </a>
-                                        </li>
+                                        
                                         <li>
                                             <a href="student-review.html">
                                                 <i class="skillgro-book-2"></i>
-                                                Reviews
+                                                My tickets
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-attempts.html">
-                                                <i class="skillgro-question"></i>
-                                                My Quiz Attempts
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="student-history.html">
-                                                <i class="skillgro-satchel"></i>
-                                                Order History
-                                            </a>
-                                        </li>
+                                        
                                     </ul>
                                 </nav>
                                 <div class="dashboard__sidebar-title mt-30 mb-20">
