--- a/new master piece/User Cycle/student-profile.html
+++ b/new master piece/User Cycle/student-profile.html
@@ -346,7 +346,7 @@
                                                 Dashboard
                                             </a>
                                         </li>
-                                        <li class="active">
+                                        <li  class="active">
                                             <a href="student-profile.html">
                                                 <i class="skillgro-avatar"></i>
                                                 My Profile
@@ -355,33 +355,17 @@
                                         <li>
                                             <a href="student-enrolled-courses.html">
                                                 <i class="skillgro-book"></i>
-                                                Enrolled Courses
+                                                My Events
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-wishlist.html">
-                                                <i class="skillgro-label"></i>
-                                                Wishlist
-                                            </a>
-                                        </li>
+                                        
                                         <li>
                                             <a href="student-review.html">
                                                 <i class="skillgro-book-2"></i>
-                                                Reviews
+                                                My tickets
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-attempts.html">
-                                                <i class="skillgro-question"></i>
-                                                My Quiz Attempts
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="student-history.html">
-                                                <i class="skillgro-satchel"></i>
-                                                Order History
-                                            </a>
-                                        </li>
+                                        
                                     </ul>
                                 </nav>
                                 <div class="dashboard__sidebar-title mt-30 mb-20">
