--- a/new master piece/User Cycle/student-setting.html
+++ b/new master piece/User Cycle/student-setting.html
@@ -355,33 +355,17 @@
                                         <li>
                                             <a href="student-enrolled-courses.html">
                                                 <i class="skillgro-book"></i>
-                                                Enrolled Courses
+                                                My Events
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-wishlist.html">
-                                                <i class="skillgro-label"></i>
-                                                Wishlist
-                                            </a>
-                                        </li>
+                                        
                                         <li>
                                             <a href="student-review.html">
                                                 <i class="skillgro-book-2"></i>
-                                                Reviews
+                                                My tickets
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="student-attempts.html">
-                                                <i class="skillgro-question"></i>
-                                                My Quiz Attempts
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="student-history.html">
-                                                <i class="skillgro-satchel"></i>
-                                                Order History
-                                            </a>
-                                        </li>
+                                        
                                     </ul>
                                 </nav>
                                 <div class="dashboard__sidebar-title mt-30 mb-20">
@@ -389,7 +373,7 @@
                                 </div>
                                 <nav class="dashboard__sidebar-menu">
                                     <ul class="list-wrap">
-                                        <li class="active">
+                                        <li  class="active">
                                             <a href="student-setting.html">
                                                 <i class="skillgro-settings"></i>
                                                 Settings
@@ -420,9 +404,9 @@
                                                 <li class="nav-item" role="presentation">
                                                     <button class="nav-link" id="itemTwo-tab" data-bs-toggle="tab" data-bs-target="#itemTwo-tab-pane" type="button" role="tab" aria-controls="itemTwo-tab-pane" aria-selected="false">Password</button>
                                                 </li>
-                                                <li class="nav-item" role="presentation">
+                                                <!-- <li class="nav-item" role="presentation">
                                                     <button class="nav-link" id="itemThree-tab" data-bs-toggle="tab" data-bs-target="#itemThree-tab-pane" type="button" role="tab" aria-controls="itemThree-tab-pane" aria-selected="false">Social Share</button>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                         <div class="tab-content" id="myTabContent">
