--- a/new master piece/User Cycle/check-out.html
+++ b/new master piece/User Cycle/check-out.html
@@ -434,7 +434,8 @@
                             </ul>
                             <p>Sorry, it seems that there are no available payment methods for your state. Please contact us if you require assistance or wish to make alternate arrangements.</p>
                             <p>Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our <a href="#">privacy policy.</a></p>
-                            <button class="btn">Place order</button>
+                           <a href="student-review.html"><button class="btn">Place order</button></a> 
+                             
                         </div>
                     </div>
                 </div>
