--- a/new master piece/User Cycle/courses.html
+++ b/new master piece/User Cycle/courses.html
@@ -541,7 +541,7 @@
                                                 <p class="author">Hosted by Leading Industry Experts</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -570,7 +570,7 @@
                                                     </li>
                                                     
                                                  </ul>
-                                                <h5 class="title"><a href="event-details.html">Annual Arts Handcraft Festival 2021</a></h5>
+                                                <h5 class="title"><a href="events-details.html">Annual Arts Handcraft Festival 2021</a></h5>
                                                 <p class="author">Hosted By Leading Artist</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
@@ -588,7 +588,7 @@
                                     <div class="col">
                                         <div class="courses__item shine__animate-item">
                                             <div class="courses__item-thumb">
-                                                <a href="event-details.html" class="shine__animate-link">
+                                                <a href="events-details.html" class="shine__animate-link">
                                                     <img src="assets/img/new/tach_event.jpg" alt="Tech Event Poster">
                                                 </a>
                                             </div>
@@ -601,11 +601,11 @@
                                                         <a href="event.html">Seminar</a>
                                                     </li>
                                                  </ul>
-                                                <h5 class="title"><a href="event-details.html">Glitch: The Ultimate Tech Symposium</a></h5>
+                                                <h5 class="title"><a href="events-details.html">Glitch: The Ultimate Tech Symposium</a></h5>
                                                 <p class="author">Hosted by Leading Industry Experts</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span the="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -619,7 +619,7 @@
                                     <div class="col">
                                         <div class="courses__item shine__animate-item">
                                             <div class="courses__item-thumb">
-                                                <a href="event-details.html" class="shine__animate-link">
+                                                <a href="events-details.html" class="shine__animate-link">
                                                     <img src="assets/img/new/bussiness4.jpg" alt="Online Business Conference Poster">
                                                 </a>
                                             </div>
@@ -632,11 +632,11 @@
                                                         <a href="event.html">Conference</a>
                                                     </li>
                                                 </ul>
-                                                <h5 class="title"><a href="event-details.html">2021 Online Business Conference</a></h5>
+                                                <h5 class="title"><a href="events-details.html">2021 Online Business Conference</a></h5>
                                                 <p class="author">Navigate the Future of Commerce</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -650,7 +650,7 @@
                                     <div class="col">
                                         <div class="courses__item shine__animate-item">
                                             <div class="courses__item-thumb">
-                                                <a href="event-details.html" class="shine__animate-link">
+                                                <a href="events-details.html" class="shine__animate-link">
                                                     <img src="assets/img/new/bussiness3.jpg" alt="Live Business Plan Conference Poster">
                                                 </a>
                                             </div>
@@ -663,11 +663,11 @@
                                                         <a href="event.html">Workshop</a>
                                                     </li>
                                                 </ul>
-                                                <h5 class="title"><a href="event-details.html">Live Business Plan Conference 2021</a></h5>
+                                                <h5 class="title"><a href="events-details.html">Live Business Plan Conference 2021</a></h5>
                                                 <p class="author">Craft Your Success</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -681,7 +681,7 @@
                                     <div class="col">
                                         <div class="courses__item shine__animate-item">
                                             <div class="courses__item-thumb">
-                                                <a href="event-details.html" class="shine__animate-link">
+                                                <a href="events-details.html" class="shine__animate-link">
                                                     <img src="assets/img/new/business2.jpg" alt="2020 Business Conference Poster">
                                                 </a>
                                             </div>
@@ -694,11 +694,11 @@
                                                         <a href="event.html">Seminar</a>
                                                     </li>
                                                 </ul>
-                                                <h5 class="title"><a href="event-details.html">2020 Business Insight Conference</a></h5>
+                                                <h5 class="title"><a href="events-details.html">2020 Business Insight Conference</a></h5>
                                                 <p class="author">Leading Strategies and Innovations</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -715,7 +715,7 @@
                                     <div class="col">
                                         <div class="courses__item shine__animate-item">
                                             <div class="courses__item-thumb">
-                                                <a href="event-details.html" class="shine__animate-link">
+                                                <a href="events-details.html" class="shine__animate-link">
                                                     <img src="assets/img/courses/course_thumb08.jpg" alt="Designing Effective Pricing Plans UX">
                                                 </a>
                                             </div>
@@ -746,7 +746,7 @@
                                     <div class="col">
                                         <div class="courses__item shine__animate-item">
                                             <div class="courses__item-thumb">
-                                                <a href="event-details.html" class="shine__animate-link">
+                                                <a href="events-details.html" class="shine__animate-link">
                                                     <img src="assets/img/courses/course_thumb09.jpg" alt="Accelerating UX Maturity With A Breakthrough Project">
                                                 </a>
                                             </div>
@@ -777,7 +777,7 @@
                                     <div class="col">
                                         <div class="courses__item shine__animate-item">
                                             <div class="courses__item-thumb">
-                                                <a href="event-details.html" class="shine__animate-link">
+                                                <a href="events-details.html" class="shine__animate-link">
                                                     <img src="assets/img/courses/course_thumb10.jpg" alt="Demystifying The New Gatsby Framework">
                                                 </a>
                                             </div>
@@ -839,12 +839,12 @@
                                                     </div>
                                                     <li class="price">$15.00</li>
                                                 </ul>
-                                                <h5 class="title"><a href="event-details.html">Resolving Conflicts Between Designers And Engineers</a></h5>
+                                                <h5 class="title"><a href="events-details.html">Resolving Conflicts Between Designers And Engineers</a></h5>
                                                 <p class="author">By <a href="#">David Millar</a></p>
                                                 <p class="info">when an unknown printer took a galley of type and scrambled type specimen book It has survived not only.</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -873,12 +873,12 @@
                                                     </div>
                                                     <li class="price">$41.00</li>
                                                 </ul>
-                                                <h5 class="title"><a href="event-details.html">Powerful Image Optimization Tools for this year</a></h5>
+                                                <h5 class="title"><a href="events-details.html">Powerful Image Optimization Tools for this year</a></h5>
                                                 <p class="author">By <a href="#">Jenny Wilson</a></p>
                                                 <p class="info">when an unknown printer took a galley of type and scrambled type specimen book It has survived not only.</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -907,12 +907,12 @@
                                                     </div>
                                                     <li class="price"><del>$24.00</del>$12.00</li>
                                                 </ul>
-                                                <h5 class="title"><a href="event-details.html">Learning JavaScript With Imagination</a></h5>
+                                                <h5 class="title"><a href="events-details.html">Learning JavaScript With Imagination</a></h5>
                                                 <p class="author">By <a href="#">Wade Warren</a></p>
                                                 <p class="info">when an unknown printer took a galley of type and scrambled type specimen book It has survived not only.</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
@@ -941,12 +941,12 @@
                                                     </div>
                                                     <li class="price"><del>$32.00</del>$19.00</li>
                                                 </ul>
-                                                <h5 class="title"><a href="event-details.html">Resolving Conflicts Between Designers And Engineers</a></h5>
+                                                <h5 class="title"><a href="events-details.html">Resolving Conflicts Between Designers And Engineers</a></h5>
                                                 <p class="author">By <a href="#">Robert Fox</a></p>
                                                 <p class="info">when an unknown printer took a galley of type and scrambled type specimen book It has survived not only.</p>
                                                 <div class="courses__item-bottom">
                                                     <div class="button">
-                                                        <a href="event-details.html">
+                                                        <a href="events-details.html">
                                                             <span class="text">Register Now</span>
                                                             <i class="flaticon-arrow-right"></i>
                                                         </a>
