--- a/new master piece/User Cycle/instructor-enrolled-courses.html
+++ b/new master piece/User Cycle/instructor-enrolled-courses.html
@@ -258,7 +258,7 @@
                             </div>
                         </div>
                         <div class="dashboard__instructor-info-right">
-                            <a href="#" class="btn btn-two arrow-btn">Create a New Course <img src="assets/img/icons/right_arrow.svg" alt="img" class="injectable"></a>
+                            <a href="#" class="btn btn-two arrow-btn">Create New Event <img src="assets/img/icons/right_arrow.svg" alt="img" class="injectable"></a>
                         </div>
                     </div>
                 </div>
