--- a/new master piece/User Cycle/Create-Event-1.html
+++ b/new master piece/User Cycle/Create-Event-1.html
@@ -406,7 +406,7 @@
                                                         </div>
                                                         <div class="form-grp">
                                                             <label for="startTime">Activity Description</label>
-                                                            <input id="startTime" type="text" value="Google map link">
+                                                            <input id="startTime" type="text" value="add description">
                                                         </div>
                                                         
                                                         <div class="form-grp">
@@ -463,7 +463,7 @@
                             <br>
                             <div class="dashboard__content-wrap" style="display: flex; justify-content: center;">
                                 <div class="submit-btn">
-                                    <button type="submit" class="btn btn-two arrow-btn">Create Event</button>
+                                    <a href="Event-check-out.html"><button type="submit" class="btn btn-two arrow-btn">Create Event</button></a>
                                 </div>
                             </div>
                         </div>
