--- a/new master piece/User Cycle/student-review.html
+++ b/new master piece/User Cycle/student-review.html
@@ -320,7 +320,7 @@
                         <div class="col-lg-9">
                             <div class="dashboard__content-wrap">
                                 <div class="dashboard__content-title">
-                                    <h4 class="title">Reviews</h4>
+                                    <h4 class="title">My Tickets</h4>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
@@ -336,11 +336,12 @@
                                                 <tbody>
                                                     <tr>
                                                         <td>
-                                                            <a href="events-details.html">The Complete Graphic Design for Beginners</a>
+                                                            <a href="events-details.html">Woman Business Conference 2019
+                                                            </a>
                                                         </td>
                                                         <td>10 Aug 2024</td>
                                                         <td>
-                                                            23$
+                                                            19$
                                                         </td>
                                                     </tr>
                                                     <tr>
