adding js to the event details and adding id's to the tags

--- a/FrontEnd/User Cycle/events-details.html
+++ b/FrontEnd/User Cycle/events-details.html
@@ -570,7 +570,7 @@
                                             <div class="courses__details-sidebar">
                                                 <div class="courses__cost-wrap">
                                                     <span>Ticket Price</span>
-                                                    <h2 class="title">$19.00</h2>
+                                                    <h2 class="title" id="Ticket_price">$19.00</h2>
                                                 </div>
                                                 <div class="courses__information-wrap">
                                                     <h5 class="title">Event Information:</h5>
@@ -578,17 +578,17 @@
                                                         <li>
                                                             <img src="assets/img/icons/calendar.svg" alt="img" class="injectable">
                                                             Date
-                                                            <span>26/10/2024</span>
+                                                            <span id="Event_Date">26/10/2024</span>
                                                         </li>
                                                         <li>
                                                             <img src="assets/img/icons/course_icon02.svg" alt="img" class="injectable">
                                                             Start Time
-                                                            <span>10.00am</span>
+                                                            <span id="Event_start_time">10.00am</span>
                                                         </li>
                                                         <li>
                                                             <img src="assets/img/icons/course_icon02.svg" alt="img" class="injectable">
                                                             End Time
-                                                            <span>3.00pm</span>
+                                                            <span id="Event_end_time">3.00pm</span>
                                                         </li>
                                                         <li> 
                                                             <img src="assets/img/icons/map-pin-svgrepo-com.svg" alt="img" class="injectable">
