added the schedual , highlights and what to expect to the event details page ,
added tables , scaffolding

made the cart , made the button to register in the local storage to the cart

--- a/FrontEnd/User Cycle/cart.html
+++ b/FrontEnd/User Cycle/cart.html
@@ -480,6 +480,7 @@
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/MyScripts/cart.js"></script>
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
