--- a/FrontEnd/User Cycle/cart.html
+++ b/FrontEnd/User Cycle/cart.html
@@ -329,8 +329,8 @@
                         <div class="cart__collaterals-wrap">
                             <h2 class="title">Cart totals</h2>
                             <ul class="list-wrap">
-                                <li>Subtotal <span>$38.00</span></li>
-                                <li>Total <span class="amount">$38.00</span></li>
+                                <li>Subtotal <span id="subtotal">$38.00</span></li>
+                                <li>Total <span id="total" class="amount">$38.00</span></li>
                             </ul>
                             <a href="check-out.html" class="btn">Proceed to checkout</a>
                         </div>
