--- a/FrontEnd/User Cycle/student-profile.html
+++ b/FrontEnd/User Cycle/student-profile.html
@@ -326,14 +326,12 @@
                                     <div class="col-lg-12">
                                         <div class="profile__content-wrap">
                                             <ul class="list-wrap">
-                                                <li><span>Registration Date</span> February 28, 2026 8:01 am</li>
-                                                <li><span>First Name</span> Emily</li>
-                                                <li><span>Last Name</span> Hannah</li>
-                                                <li><span>Username</span> instructor</li>
-                                                <li><span>Email</span> info@skillgrodemo.com</li>
-                                                <li><span>Phone Number</span> +123 599 8989</li>
-                                                <li><span>Skill/Occupation</span> Graphic Design</li>
-                                                <li><span>Biography</span> I am eager to bring my passion for creating user-friendly and efficient web interfaces to your dynamic team. I am applying for Front End Developer position in your company.</li>
+                                                <li id="firstname" ><span>First Name</span> Emily</li>
+                                                <li id="lastname"><span>Last Name</span> Hannah</li>
+                                                <li id="username"><span>Username</span> instructor</li>
+                                                <li id="email"><span>Email</span> info@skillgrodemo.com</li>
+                                                <li id="phone"><span>Phone Number</span> +123 599 8989</li>        
+                                                <li id="biography"><span>Biography</span> I am eager to bring my passion for creating user-friendly and efficient web interfaces to your dynamic team. I am applying for Front End Developer position in your company.</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -486,6 +484,7 @@
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/MyScripts/MyProfile_Display.js"></script>
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
@@ -494,3 +493,4 @@
 
 <!-- Mirrored from html.themegenix.com/skillgro/student-profile.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2024 11:07:04 GMT -->
 </html>
+ 
