--- a/FrontEnd/User Cycle/student-review.html
+++ b/FrontEnd/User Cycle/student-review.html
@@ -527,6 +527,8 @@
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/MyScripts/MySimpleTickets.js"></script>
+  
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
