--- a/FrontEnd/User Cycle/registration.html
+++ b/FrontEnd/User Cycle/registration.html
@@ -278,12 +278,14 @@
                             </div>
                             <form action="#" class="account__form">
                                 <div class="row gutter-20">
+
                                     <div class="col-md-6">
                                         <div class="form-grp">
                                             <label for="fast-name">First Name</label>
                                             <input type="text" id="fast-name" placeholder="First Name">
                                         </div>
                                     </div>
+
                                     <div class="col-md-6">
                                         <div class="form-grp">
                                             <label for="last-name">Last name</label>
@@ -291,18 +293,35 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="form-grp">
+                                    <label for="username">Username</label>
+                                    <input type="text" id="username" placeholder="username">
+                                </div>
+                                
                                 <div class="form-grp">
                                     <label for="email">Email</label>
                                     <input type="email" id="email" placeholder="email">
                                 </div>
+
+                               
+
+                                <div class="form-grp">
+                                    <label for="phone">Phone</label>
+                                    <input type="text" id="phone" placeholder="phone">
+                                </div>
+
+
                                 <div class="form-grp">
                                     <label for="password">Password</label>
                                     <input type="password" id="password" placeholder="password">
                                 </div>
+
                                 <div class="form-grp">
                                     <label for="confirm-password">Confirm Password</label>
                                     <input type="password" id="confirm-password" placeholder="Confirm Password">
                                 </div>
+
                                 <button type="submit" class="btn btn-two arrow-btn">Sign Up<img src="assets/img/icons/right_arrow.svg" alt="img" class="injectable"></button>
                             </form>
                             <div class="account__switch">
