--- a/FrontEnd/User Cycle/login.html
+++ b/FrontEnd/User Cycle/login.html
@@ -282,7 +282,7 @@
                                 </div>
                                 <div class="form-grp">
                                     <label for="password">Password</label>
-                                    <input id="password" type="text" placeholder="password">
+                                    <input id="password" type="password" placeholder="password">
                                 </div>
                                 <div class="account__check">
                                     <div class="account__check-remember">
@@ -445,6 +445,7 @@
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
+    <script src="assets/MyScripts/Login.js"></script>
 </body>
 
 
