--- a/FrontEnd/User Cycle/registration.html
+++ b/FrontEnd/User Cycle/registration.html
@@ -298,7 +298,7 @@
                                     <label for="username">Username</label>
                                     <input type="text" id="username" placeholder="username">
                                 </div>
-                                
+
                                 <div class="form-grp">
                                     <label for="email">Email</label>
                                     <input type="email" id="email" placeholder="email">
@@ -474,6 +474,8 @@
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
+    <script src="assets\MyScripts\Registerations.js"></script>
+ 
 </body>
 
 
