Create event controller

--- a/FrontEnd/User Cycle/instructor-dashboard.html
+++ b/FrontEnd/User Cycle/instructor-dashboard.html
@@ -241,7 +241,7 @@
                     <div class="dashboard__instructor-info">
                         
                         <div class="dashboard__instructor-info-right">
-                            <a href="#" class="btn btn-two arrow-btn">Create New Event <img src="assets/img/icons/right_arrow.svg" alt="img" class="injectable"></a>
+                            <a href="Create-Event-1.html" class="btn btn-two arrow-btn">Create New Event <img src="assets/img/icons/right_arrow.svg" alt="img" class="injectable"></a>
                         </div>
                     </div>
                 </div>
