--- a/FrontEnd/User Cycle/student-profile.html
+++ b/FrontEnd/User Cycle/student-profile.html
@@ -240,22 +240,10 @@
                     <div class="dashboard__top-bg" data-background="assets/img/bg/student_bg.jpg"></div>
                     <div class="dashboard__instructor-info">
                         <div class="dashboard__instructor-info-left">
-                            <div class="thumb">
-                                <img src="assets/img/courses/details_instructors02.jpg" alt="img">
-                            </div>
-                            <div class="content">
-                                <h4 class="title">Emily Hannah</h4>
-                                <ul class="list-wrap">
-                                    <li>
-                                        <img src="assets/img/icons/course_icon03.svg" alt="img" class="injectable">
-                                        10 Events Enrolled
-                                    </li>
-                                     
-                                </ul>
-                            </div>
+                      
                         </div>
                         <div class="dashboard__instructor-info-right">
-                            <a href="instructor-dashboard.html" class="btn btn-two arrow-btn">Become an Organizer <img src="assets/img/icons/right_arrow.svg" alt="img" class="injectable"></a>
+                            <a href="instructor-dashboard.html" class="btn btn-two arrow-btn">Organizer Dashboard<img src="assets/img/icons/right_arrow.svg" alt="img" class="injectable"></a>
                         </div>
                     </div>
                 </div>
