--- a/FrontEnd/Admin Cycle/Events.html
+++ b/FrontEnd/Admin Cycle/Events.html
@@ -107,9 +107,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="plans.html" class="waves-effect">
+                        <a href="Contact.html" class="waves-effect">
                             <i class="fe-file-text"></i>
-                            <span> Plans </span>
+                            <span> Contact </span>
                         </a>
                     </li>
                 </ul>
@@ -127,9 +127,7 @@
                         <div class="col-12">
                             <div class="page-title-box">
                                 <div class="page-title-right">
-                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#eventModal">
-                                        <i class="mdi mdi-plus-circle"></i> Add Event
-                                    </button>
+                                   
                                 </div>
                                 <h4 class="page-title">Events</h4>
                             </div>
